<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.filter.FilterActivity">

    <Button
        android:id="@+id/btn_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_10dp"
        android:text="@string/filter"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/tv_area_label">

        <RadioButton
            android:id="@+id/rb_american"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_2dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:padding="@dimen/dimen_10dp"
            android:text="@string/american"
            android:textColor="@drawable/radio_text_selector"
            android:textSize="@dimen/dimen_18sp" />

        <RadioButton
            android:id="@+id/rb_canadian"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_2dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:padding="@dimen/dimen_10dp"
            android:text="@string/canadian"
            android:textColor="@drawable/radio_text_selector"
            android:textSize="@dimen/dimen_18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_area_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/area"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_area" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_filter"
        app:layout_constraintTop_toBottomOf="@+id/tv_category_label" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_keyboard_backspace_24"
        app:title="@string/filter"
        app:titleTextColor="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>